RELEASE NOTES for qore v0.7.0

NOTE: for platform-specific notes and build instructions, please see the file BUILD

qore 0.7.0 is a major release with major new features
*) stable ABI and API, cleaned-up public header files, development packages
*) documented public API (with doxygen), documentation packages
*) complete reimplementation of the type and operator subsystems
*) reimplemented variable and object locking, no more possibility of nested locks and deadlocks
*) major performance and memory usage improvements
*) support for closures and encapsulating the state of local variables in the closure
*) some functional programming support: new operators: map, foldr, foldl, select
*) new implicit argument references: $$ (entire argument list), $1, $2, ...
*) new special object method: "memberNotification()", called when members are updated externally to the class
*) qt module based on QT4
*) opengl module
*) glut module
*) bz2 compressed data support (compression and decompression)
*) file locking support in the File class (based on fcntl())
*) support for SHA224, SHA256, SHA384, and SHA512 digest algorithms
*) the Oracle database driver will now try to reconnect a lost connection to the server if not in a transaction

***********************
*** LANGUAGE ISSUES ***
***********************

Out of Memory Errors
--------------------
*) BUG: out of memory conditions are not handled with the c++ new operator... I need a good solution for that.  Generally the Qore program will crash if the new operator cannot allocate the memory it needs, however work has begun on handling out of memory errors starting in v0.5.2

References, Copying, Passing by Value
-------------------------------------