@@ -41,6 +41,7 @@ DLLEXPORT int qore_module_api_minor = QORE_MODULE_API_MINOR;
 DLLEXPORT qore_module_init_t qore_module_init = ncurses_module_init;
 DLLEXPORT qore_module_ns_init_t qore_module_ns_init = ncurses_module_ns_init;
 DLLEXPORT qore_module_delete_t qore_module_delete = ncurses_module_delete;
+DLLEXPORT qore_license_t qore_module_license = QL_LGPL;
 #endif
 
 class QoreThreadLock lUpdate, lGetch;
