@@ -39,6 +39,7 @@ DLLEXPORT int qore_module_api_minor = QORE_MODULE_API_MINOR;
 DLLEXPORT qore_module_init_t qore_module_init = opengl_module_init;
 DLLEXPORT qore_module_ns_init_t qore_module_ns_init = opengl_module_ns_init;
 DLLEXPORT qore_module_delete_t qore_module_delete = opengl_module_delete;
+DLLEXPORT qore_license_t qore_module_license = QL_LGPL;
 #endif
 
 QoreNamespace opengl_ns("OpenGL");
