@@ -49,7 +49,7 @@ DLLEXPORT qore_module_init_t qore_module_init = qt_opengl_module_init;
 DLLEXPORT qore_module_ns_init_t qore_module_ns_init = qt_opengl_module_ns_init;
 DLLEXPORT qore_module_delete_t qore_module_delete = qt_opengl_module_delete;
 DLLEXPORT char *qore_module_dependencies[] = { "qt", "opengl", 0 };
-//DLLEXPORT qore_license_t qore_module_license = QL_GPL;
+DLLEXPORT qore_license_t qore_module_license = QL_GPL;
 #endif
 
 static QoreNamespace gl_ns("QtOpenGL");
