@@ -215,7 +215,7 @@ DLLEXPORT int qore_module_api_minor = QORE_MODULE_API_MINOR;
 DLLEXPORT qore_module_init_t qore_module_init = qt_module_init;
 DLLEXPORT qore_module_ns_init_t qore_module_ns_init = qt_module_ns_init;
 DLLEXPORT qore_module_delete_t qore_module_delete = qt_module_delete;
-//DLLEXPORT qore_license_t qore_module_license = QL_GPL;
+DLLEXPORT qore_license_t qore_module_license = QL_GPL;
 #endif
 
 static class AbstractQoreNode *f_QObject_connect(const QoreListNode *params, class ExceptionSink *xsink)
