@@ -53,6 +53,7 @@ DLLEXPORT int qore_module_api_minor = QORE_MODULE_API_MINOR;
 DLLEXPORT qore_module_init_t qore_module_init = sybase_module_init;
 DLLEXPORT qore_module_ns_init_t qore_module_ns_init = sybase_module_ns_init;
 DLLEXPORT qore_module_delete_t qore_module_delete = sybase_module_delete;
+DLLEXPORT qore_license_t qore_module_license = QL_LGPL;
 #endif
 
 static DBIDriver* DBID_SYBASE;
