@@ -49,6 +49,7 @@ DLLEXPORT int qore_module_api_minor = QORE_MODULE_API_MINOR;
 DLLEXPORT qore_module_init_t qore_module_init = tibrv_module_init;
 DLLEXPORT qore_module_ns_init_t qore_module_ns_init = tibrv_module_ns_init;
 DLLEXPORT qore_module_delete_t qore_module_delete = tibrv_module_delete;
+DLLEXPORT qore_license_t qore_module_license = QL_LGPL;
 #endif
 
 static QoreNamespace *tibns;
